crates/parse/src/tests/snapshots/op_prec_right_3.snap
---
source: crates/parse/src/tests.rs
assertion_line: 251
expression: "(test[1], ast, ast_string)"
---
- 19 ** 21 ** 40 / 2
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Div
            lhs:
              kind:
                BinOp:
                  op: Pow
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 19
                        ty: ~
                  rhs:
                    kind:
                      BinOp:
                        op: Pow
                        lhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 21
                              ty: ~
                        rhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 40
                              ty: ~
                        ty: ~
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 2
                  ty: ~
            ty: ~
- (/ (** 19 (** 21 40)) 2)

