crates/parse/src/tests/snapshots/parens_complex.snap
---
source: crates/parse/src/tests.rs
assertion_line: 258
expression: "(test[1], ast, ast_string)"
---
- 3 * ((19 + 21) - 5) / 40
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Div
            lhs:
              kind:
                BinOp:
                  op: Mul
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 3
                        ty: ~
                  rhs:
                    kind:
                      BinOp:
                        op: Sub
                        lhs:
                          kind:
                            BinOp:
                              op: Add
                              lhs:
                                kind:
                                  Lit:
                                    value:
                                      UInt64: 19
                                    ty: ~
                              rhs:
                                kind:
                                  Lit:
                                    value:
                                      UInt64: 21
                                    ty: ~
                              ty: ~
                        rhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 5
                              ty: ~
                        ty: ~
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 40
                  ty: ~
            ty: ~
- (/ (* 3 (- (+ 19 21) 5)) 40)

