crates/parse/src/tests/snapshots/string_basic.snap
---
source: crates/parse/src/tests.rs
assertion_line: 88
expression: "(test[1], ast, ast_string)"
---
- "let s: str = \"foo\""
- Ok:
    nodes:
      - kind:
          Let:
            name: s
            antn:
              Comp: str
            init:
              kind:
                Lit:
                  value:
                    Str: foo
                  ty: ~
- "(let s:str foo)"

