crates/parse/src/tests/snapshots/struct_dup.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {}\nstruct Foo {}\n"
- Err:
    - message: "struct `Foo` already defined"
      line: 3
      column: 8
- "struct `Foo` already defined at 3:8"

